--- a/src/main/resources/language_in.properties
+++ b/src/main/resources/language_in.properties
@@ -1,2 +1,7 @@
 start = Please enter type for Start Game
 askCard = Press X button and enter to ask for another card or key press Z and enter to stand
+winPerson = !!!!!!WINNER JUGADOR!!!!!!
+winCroupier = !!!!!!WINNER CROUPIER!!!!!
+sumPerson = Sum Person:
+sumCroupier = Sum Croupier:
+tie = !!!!TIE!!!!!
