--- a/src/main/resources/language_es.properties
+++ b/src/main/resources/language_es.properties
@@ -1,2 +1,7 @@
 start = Por favor, teclear enter para Iniciar Juego
 askCard = Oprimir tecla X y enter para pedir otra carta o oprimir tecla Z y enter para plantarse
+winPerson = !!!!!!GANA JUGADOR!!!!!!
+winCroupier = !!!!!!GANA CROUPIER!!!!!
+sumPerson = Sumatoria Person:
+sumCroupier = Sumatoria Croupier:
+tie = !!!!EMPATE!!!!!
